--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -43,6 +43,9 @@
         @if $breakpoint == phone {
             @media only screen and (max-width: 37.5em){@content;}   //600px
         }
+        @if $breakpoint == wrap-start {
+            @media only screen and (max-width: 42.25em){@content;}   //600px
+        }
         @if $breakpoint == tab-port {
             @media only screen and (max-width: 56.25em){@content;}  //900px
         }
